# claude_config_switcher

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.specify/memory/: constitution.md
scripts/: build.py  dev_setup.py
specs/001-config-switcher-gui/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-config-switcher-gui/checklists/: requirements.md
specs/001-config-switcher-gui/contracts/: cli_interface.md  config_service.md  profile_service.md
src/: __init__.py  cli.py  main.py
src/gui/: __init__.py  app.py
src/gui/widgets/: __init__.py  profile_editor.py  profile_list.py  profile_list_simple.py  profile_preview.py  settings_dialog.py
src/models/: __init__.py  config.py  profile.py
src/services/: __init__.py  config_service.py  profile_service.py  validation_service.py
src/storage/: __init__.py  database.py
src/utils/: __init__.py  environment.py  exceptions.py  logger.py  paths.py
tests/: __init__.py
tests/contract/: __init__.py
tests/integration/: __init__.py
tests/unit/: test_profile_model.py  test_validation_service.py
